package correctedDIP;

public interface Engine {
    void start();
}

