package violationDIP;

class GasolineEngine {
    public void start() {
        System.out.println("Starting gasoline engine...");
    }
}

